--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,11 @@ name = "documentionator"
 version = "0.1.0"
 edition = "2021"
 
-
 [dependencies]
 toml = "0.5.8"
 markdown-gen = "1.2.1"
+
+serde_derive = "1.0.135"
+serde = "1.0.135"
+
+anyhow = "1"
