--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,21 @@
 [package]
-name = "documentionator"
+name = "documentinator"
 version = "0.1.0"
 edition = "2021"
+authors = ["Andrew Ealovega"]
+
+description = """
+ROS2 documentation generator and linter
+"""
+
+[features]
+multi_thread = ['rayon']
 
 [dependencies]
 toml = "0.5.8"
+clap = { version = "3.0.12", features = ['derive'] }
+log = "0.4.14"
+rayon = { version = "1.5.1", optional = true }
 
 serde_derive = "1.0.135"
 serde = "1.0.135"
