--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,18 @@ ROS2 documentation generator and linter
 """
 
 [features]
+default = ['multi_thread']
 multi_thread = ['rayon']
 
 [dependencies]
 toml = "0.5.8"
 clap = { version = "3.0.12", features = ['derive'] }
+clap-verbosity-flag = "0.4.1"
 log = "0.4.14"
+env_logger = "0.9.0"
+
 rayon = { version = "1.5.1", optional = true }
+concurrent-queue = "1.2.2"
 
 serde_derive = "1.0.135"
 serde = "1.0.135"
