--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,28 +1,36 @@
 [package]
 name = "documentinator"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
 authors = ["Andrew Ealovega"]
 
 description = """
 ROS2 documentation generator and linter
 """
+license = "MIT OR Apache-2.0"
+homepage = "https://github.com/andyblarblar/documentinator"
+repository = "https://github.com/andyblarblar/documentinator"
+documentation = "https://docs.rs/documentinator/"
+readme = "README.md"
+categories = ["command-line-interface", "command-line-utilities", "develupment-tools"]
+keywords = ["ros", "documentation"]
+
 
 [features]
 default = ['multi_thread']
 multi_thread = ['rayon']
 
 [dependencies]
-toml = "0.5.8"
-clap = { version = "3.0.12", features = ['derive'] }
-clap-verbosity-flag = "0.4.1"
-log = "0.4.14"
-env_logger = "0.9.0"
+toml = "^0.5"
+clap = { version = "^3.0", features = ['derive'] }
+clap-verbosity-flag = "^0.4"
+log = "^0.4"
+env_logger = "^0.9"
 
-rayon = { version = "1.5.1", optional = true }
-concurrent-queue = "1.2.2"
+rayon = { version = "^1.5", optional = true }
+concurrent-queue = "^1.2"
 
-serde_derive = "1.0.135"
-serde = "1.0.135"
+serde_derive = "1"
+serde = "1"
 
 anyhow = "1"
