--- a/assets/demo.doctor.toml
+++ b/assets/demo.doctor.toml
@@ -1,4 +1,8 @@
-#This is a template file. Delete things to your liking.
+#ROS package you are documenting
+package_name = "Amazing package name"
+repo = "https://youtu.be/oHg5SJYRHA0"
+
+#You can have multiple nodes in one package
 [[nodes]]
 node_name = 'My cool node'
 #Relitive to this file
@@ -6,10 +10,12 @@ source_file = ['./src/some.cpp']
 summary = '''
 This is your node summary.
 '''
+# (optional)
 potential_improvements = 'Burn with fire'
+# (optional)
 misc = 'An (optional) description of something else.'
 
-#Your published topics
+#Your published topics (optional)
 [[nodes.publishes]]
 name = 'camera_cloud'
 description = 'pointcloud topic.'
@@ -18,7 +24,7 @@ description = 'pointcloud topic.'
 name = 'camera_cloud2'
 description = 'pointcloud2d topic.'
 
-#Your subscribed topics
+#Your subscribed topics (optional)
 [[nodes.subscribes]]
 name = 'image_raw'
 description = 'The raw image (not-debayerd) from the camera node/gazebo.'
@@ -27,12 +33,12 @@ description = 'The raw image (not-debayerd) from the camera node/gazebo.'
 name = 'camera_info'
 description = 'The standard camera info topic, used to find things like resolution.'
 
-#Your node parameters
+#Your node parameters (optional)
 [[nodes.params]]
 name = 'kernel_size'
 description = 'Size of the erosion kernel. Default 5'
 
-#Your launchfile info
+#Your launchfile info (optional)
 [nodes.launch]
 file_path = './launch/WLD.launch.py'
 usage = 'just launch I guess'
