--- a/test_assets/white_line_detection.doctor.toml
+++ b/test_assets/white_line_detection.doctor.toml
@@ -34,7 +34,7 @@ description = 'The standard camera info topic, used to find things like resoluti
 name = 'kernel_size'
 description = 'Size of the erosion kernel. Default 5'
 
-[nodes.launch]
+[[nodes.launch]]
 file_path = '/launch/WLD.launch.py'
 usage = 'just launch I guess'
 
